Fix displaying hover tooltip on smaller screens
The tooltip was displayed using hacky ways. If the width of the screen
was above a certain threshold, we displayed a container (floating to the
right) with the contents. This container was hidden for smaller screens.

A better way of showing the tooltip is to nest the columns. By doing so,
we get rid of the magic number used to hide/show the container. We also
have to no longer use "float: right".

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -58,9 +58,8 @@ h1, h2, h3, body { font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "
 #main-container .display .thumb input { display: inline; }
 #main-container .display .thumb .heading { display: inline; }
 #main-container .display #description {
-  float: right;
-  width: 350px;
-  padding: 7px;
+  padding: 7px 0 0 7px;
+  vertical-align: center;
   background-color: rgba(192, 192, 192, 0.4);
 }
 
